--- a/.github/workflows/docker-image.yaml
+++ b/.github/workflows/docker-image.yaml
@@ -26,18 +26,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Build the Docker image
     
-    - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
+    - name: Checkout
+      uses: actions/checkout@v2
+    
+    - name: Googgle Cloud Github Actions
+      uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
       with: 
         version: '270.0.0'
         service_account_key: ${{ secrets.GCR_KEY }} 
         
+    - name: Googgle Cloud Authentication
     - run: |
         gcloud auth configure-docker    
     
-    - name: Build
+    - name: Build Docker
       run: docker build . --file Dockerfile --tag assignforce-auth
 
     - name: Publish
