--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   application:
     name: auth-service
   datasource:
-    url: ${AssignForceAuth}
+    url: jdbc:postgresql://34.66.74.89:5432/authorization-db?user=revatureBatch944&password=AdamRanieri
     driver-class-name: org.postgresql.Driver
   jpa:
     show-sql: true
